# agency-agents

./: .gitignore  .windsurfrules  AGENTS_LIST.md  AGENTS_LIST_CN.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTING_zh-CN.md  CONVENTIONS.md  DRISK_Agent_Execution_Steps.md  DRISK_Comprehensive_Summary.md  DRISK_UKPoliceAPI_Integration_Spec.md  Gemfile  Google Drive  LESSONS.md  README.md  README.ru.md  README.zh-TW.md  SECURITY.md  SECURITY_FIX_PR.md  _config.yml  action.yml  agency-agent-selector.md  ai_engineer.json  cinematic_prompt_engineer.json  dashboard.py  diagnose_bot.py  feat: add CMS Accessibility Specialist agent  film_content_strategist;.json  gsd-executor.md  gsd-planner.md  gsd-research-synthesizer.md  gsd-roadmapper.md  index.html  index.md  insta_indie.json  install.bat  install.ps1  orchidea-content-engine-state.md  package-lock.json  package.json  (+6 more)
.claude-plugin/: plugin.json
.todo/: project-translation-task.md
__tests__/: loader.test.ts  registry.test.ts  swarm.test.ts
_data/: agents.yml  categories.yml
_layouts/: agent.html  default.html
_site/: JEKYLL_README.md  index.html  sitemap.xml
agency-agents/: blockchain-security-auditor.md  engineering-solidity-smart-contract-engineer.md  engineering-wechat-mini-program-developer.md  (+4 more)
runtime/: CHANGELOG.md  Dockerfile  README.md  pyproject.toml
runtime/agency/: __init__.py  cli.py  executor.py  llm.py  memory.py  planner.py  server.py  skills.py  tools.py
runtime/tests/: test_cli.py  test_executor.py  test_llm_config.py  test_planner.py  test_server.py  test_skills.py  test_tools.py
src/: cli.ts  (+5 more)
(+2380 files in other folders)
